--------------------------------------------------------------------------------------------------
Release notes version 1.9.1_beta : Enhancements, modifications and corrected bugs since version 1.9.0 :
--------------------------------------------------------------------------------------------------
--------------------------------------------------------------------------------------------------
Release notes version 1.9.0 : Enhancements, modifications and corrected bugs since version 1.8.4 :
--------------------------------------------------------------------------------------------------
17/06/22 (TRUST)  New feature : New ICoCo method : set/getInputIntValue() to drive the "equation_non_resolue" parameter. Also added "getDirectAccessToUnknown()" method to directly access TRUST unknown array.
14/06/22 (TRUST)  Tools       : Upgrade to MEDCoupling 9.9.0
07/06/22 (TRUST)  Major Change: Much more functionalities and developpements for Pb_Multiphase. The problem supports now additional equations for turbulence modelling !
07/06/22 (TRUST)  Major Change: Huge refactoring/reformulation of the discretizations PolyMAC & PolyMAC_P0 (previous CoviMAC). Schemes are now more stable and compatible with Pb_Multiphase
30/05/22 (TRUST)  Fix         : High frequency writing MED files were slower and slower
30/05/22 (TRUST)  Build       : Add configure option -force_system_mpi to use system MPI library (provided MPICH library by default on PC)
23/05/22 (TRUST)  New feature : Add a new turbulent boundary layer model (WW) that can be used for an immersed boundary condition (IBC) with the finite element discretization
10/05/22 (TRUST)  New keyword : Post processing option "DeprecatedKeepDuplicatedProbes 1" to keep previous strategy when writing probes (keep duplicated points)
09/05/22 (TRUST)  Fix         : Option Correction_visco_turb_pour_controle_pas_de_temps wasn't correctly implemented producing residual jumps during restart